@@ -12,6 +12,10 @@ What's New in Python 3.2 Alpha 2?
 Core and Builtins
 -----------------
 
+- Issue #9599: Create PySys_FormatStdout() and PySys_FormatStderr() functions
+  to write a message formatted by PyUnicode_FromFormatV() to sys.stdout and
+  sys.stderr.
+
 - Issue #9542: Create PyUnicode_FSDecoder() function, a ParseTuple converter:
   decode bytes objects to unicode using PyUnicode_DecodeFSDefaultAndSize();
   str objects are output as-is.
